# peekcell-eln

./: .gitignore  README.md  locale.dic  pyproject.toml
peekcell_eln/: manage.py
peekcell_eln/eln/: apps.py  urls.py
peekcell_eln/eln/forms/: vial_sample_creation.py
peekcell_eln/eln/migrations/: 0001_initial.py  0002_clinicalstudy.py  0003_hospital_person_clinical_study_person_hospital.py  0004_hospital_clinical_studies.py  0005_sample_vial.py  0006_sample_type.py  0007_storage_person_is_test_sample_storage_vial_storage.py  0008_alter_sample_person_alter_vial_sample.py  0009_product.py  0010_alter_product_status.py  0011_alter_product_name.py  0012_product_created_at_alter_product_name.py  0013_product_type.py  0014_vial_is_closed.py  0015_vial_created_at_vial_is_sediment.py  0016_experiment_experimentfilter.py  0017_remove_experiment_vial_experiment_vial.py  0018_sample_label_vial_label.py  0019_experiment_comment_alter_person_clinical_study.py  0020_experimentcentrifugation.py  0021_experimentrnaextraction.py  0022_experimentreversetranscriptase.py  0023_alter_experimentreversetranscriptase_kit_and_more.py  0024_kit.py  0025_rename_kit_primer.py  0026_alter_product_name.py  0027_experimentqpcr.py  0028_remove_primer_type_remove_product_type.py  0029_experimentreversetranscriptase_contain_spike_in_and_more.py  0030_alter_sample_label_alter_vial_label.py  0031_alter_experiment_comment.py
peekcell_eln/eln/models/: __init__.py  clinical_study.py  consumable.py  hospital.py  person.py  primer.py  (+4 more)
peekcell_eln/peekcell_eln/: asgi.py  settings.py  urls.py  wsgi.py
(+61 files in other folders)
